var hierarchy =
[
    [ "c_hash_node", "structc__hash__node.html", null ],
    [ "c_hash_table", "structc__hash__table.html", null ],
    [ "DataReader", null, [
      [ "lbann::DataGenerator", "classlbann_1_1DataGenerator.html", null ]
    ] ],
    [ "layer_header", "structlayer__header.html", null ],
    [ "lbann::adam::packing_header", "structlbann_1_1adam_1_1packing__header.html", null ],
    [ "lbann::Al::dummy_backend", "classlbann_1_1Al_1_1dummy__backend.html", null ],
    [ "lbann::Al::request", "structlbann_1_1Al_1_1request.html", null ],
    [ "lbann::cudnn::cudnn_manager", "classlbann_1_1cudnn_1_1cudnn__manager.html", null ],
    [ "lbann::cudnn::matrix", "classlbann_1_1cudnn_1_1matrix.html", null ],
    [ "lbann::CUtility", "classlbann_1_1CUtility.html", null ],
    [ "lbann::data_buffer", "classlbann_1_1data__buffer.html", null ],
    [ "lbann::data_store_image::Triple", "structlbann_1_1data__store__image_1_1Triple.html", null ],
    [ "lbann::dataset", "classlbann_1_1dataset.html", null ],
    [ "lbann::fetch_data_functor", "classlbann_1_1fetch__data__functor.html", null ],
    [ "lbann::generic_data_reader::packing_header", "structlbann_1_1generic__data__reader_1_1packing__header.html", null ],
    [ "lbann::generic_data_store", "classlbann_1_1generic__data__store.html", [
      [ "lbann::data_store_csv", "classlbann_1_1data__store__csv.html", null ],
      [ "lbann::data_store_image", "classlbann_1_1data__store__image.html", [
        [ "lbann::data_store_imagenet", "classlbann_1_1data__store__imagenet.html", [
          [ "lbann::data_store_imagenet_patches", "classlbann_1_1data__store__imagenet__patches.html", null ],
          [ "lbann::data_store_multi_images", "classlbann_1_1data__store__multi__images.html", [
            [ "lbann::data_store_triplet", "classlbann_1_1data__store__triplet.html", null ]
          ] ]
        ] ]
      ] ],
      [ "lbann::data_store_merge_features", "classlbann_1_1data__store__merge__features.html", null ],
      [ "lbann::data_store_merge_samples", "classlbann_1_1data__store__merge__samples.html", null ],
      [ "lbann::data_store_pilot2_molecular", "classlbann_1_1data__store__pilot2__molecular.html", null ]
    ] ],
    [ "lbann::generic_input_layer::dataset_header", "structlbann_1_1generic__input__layer_1_1dataset__header.html", null ],
    [ "lbann::generic_io_buffer", "classlbann_1_1generic__io__buffer.html", [
      [ "lbann::distributed_io_buffer", "classlbann_1_1distributed__io__buffer.html", null ],
      [ "lbann::partitioned_io_buffer", "classlbann_1_1partitioned__io__buffer.html", null ]
    ] ],
    [ "lbann::image_utils", "classlbann_1_1image__utils.html", null ],
    [ "lbann::Layer", "classlbann_1_1Layer.html", [
      [ "lbann::activation_layer", "classlbann_1_1activation__layer.html", [
        [ "lbann::entrywise_activation_layer", "classlbann_1_1entrywise__activation__layer.html", [
          [ "lbann::atan_layer< T_layout >", "classlbann_1_1atan__layer.html", null ],
          [ "lbann::bent_identity_layer< T_layout >", "classlbann_1_1bent__identity__layer.html", null ],
          [ "lbann::elu_layer< T_layout >", "classlbann_1_1elu__layer.html", null ],
          [ "lbann::exponential_layer< T_layout >", "classlbann_1_1exponential__layer.html", null ],
          [ "lbann::leaky_relu_layer< T_layout >", "classlbann_1_1leaky__relu__layer.html", null ],
          [ "lbann::power_layer< T_layout >", "classlbann_1_1power__layer.html", null ],
          [ "lbann::relu_layer< T_layout >", "classlbann_1_1relu__layer.html", null ],
          [ "lbann::selu_layer< T_layout >", "classlbann_1_1selu__layer.html", null ],
          [ "lbann::sigmoid_layer< T_layout >", "classlbann_1_1sigmoid__layer.html", null ],
          [ "lbann::smooth_relu_layer< T_layout >", "classlbann_1_1smooth__relu__layer.html", null ],
          [ "lbann::softplus_layer< T_layout >", "classlbann_1_1softplus__layer.html", null ],
          [ "lbann::swish_layer< T_layout >", "classlbann_1_1swish__layer.html", null ],
          [ "lbann::tanh_layer< T_layout >", "classlbann_1_1tanh__layer.html", null ]
        ] ],
        [ "lbann::identity_layer< T_layout >", "classlbann_1_1identity__layer.html", null ],
        [ "lbann::softmax_layer< T_layout >", "classlbann_1_1softmax__layer.html", null ]
      ] ],
      [ "lbann::io_layer", "classlbann_1_1io__layer.html", [
        [ "lbann::generic_input_layer", "classlbann_1_1generic__input__layer.html", [
          [ "lbann::input_layer< T_io_buffer, T_layout >", "classlbann_1_1input__layer.html", null ]
        ] ],
        [ "lbann::generic_target_layer", "classlbann_1_1generic__target__layer.html", [
          [ "lbann::reconstruction_layer< T_layout >", "classlbann_1_1reconstruction__layer.html", null ],
          [ "lbann::target_layer< T_io_buffer, T_layout >", "classlbann_1_1target__layer.html", null ]
        ] ]
      ] ],
      [ "lbann::learning_layer", "classlbann_1_1learning__layer.html", [
        [ "lbann::base_convolution_layer", "classlbann_1_1base__convolution__layer.html", [
          [ "lbann::convolution_layer< T_layout >", "classlbann_1_1convolution__layer.html", null ],
          [ "lbann::deconvolution_layer< T_layout >", "classlbann_1_1deconvolution__layer.html", null ]
        ] ],
        [ "lbann::fully_connected_layer< T_layout >", "classlbann_1_1fully__connected__layer.html", null ]
      ] ],
      [ "lbann::regularizer_layer", "classlbann_1_1regularizer__layer.html", [
        [ "lbann::batch_normalization< T_layout >", "classlbann_1_1batch__normalization.html", null ],
        [ "lbann::dropout< T_layout >", "classlbann_1_1dropout.html", null ],
        [ "lbann::local_response_normalization_layer< T_layout >", "classlbann_1_1local__response__normalization__layer.html", null ],
        [ "lbann::selu_dropout< T_layout >", "classlbann_1_1selu__dropout.html", null ]
      ] ],
      [ "lbann::transform_layer", "classlbann_1_1transform__layer.html", [
        [ "lbann::bernoulli_layer< T_layout >", "classlbann_1_1bernoulli__layer.html", null ],
        [ "lbann::concatenation_layer< T_layout >", "classlbann_1_1concatenation__layer.html", null ],
        [ "lbann::constant_layer< T_layout >", "classlbann_1_1constant__layer.html", null ],
        [ "lbann::dummy_layer< T_layout >", "classlbann_1_1dummy__layer.html", null ],
        [ "lbann::evaluation_layer< T_layout >", "classlbann_1_1evaluation__layer.html", null ],
        [ "lbann::gaussian_layer< T_layout >", "classlbann_1_1gaussian__layer.html", null ],
        [ "lbann::hadamard_layer< T_layout >", "classlbann_1_1hadamard__layer.html", null ],
        [ "lbann::pooling_layer< T_layout >", "classlbann_1_1pooling__layer.html", null ],
        [ "lbann::reduction_layer< T_layout >", "classlbann_1_1reduction__layer.html", null ],
        [ "lbann::reshape_layer< T_layout >", "classlbann_1_1reshape__layer.html", null ],
        [ "lbann::safe_inv_layer< T_layout >", "classlbann_1_1safe__inv__layer.html", null ],
        [ "lbann::slice_layer< T_layout >", "classlbann_1_1slice__layer.html", null ],
        [ "lbann::split_layer< T_layout >", "classlbann_1_1split__layer.html", null ],
        [ "lbann::sum_layer< T_layout >", "classlbann_1_1sum__layer.html", null ],
        [ "lbann::uniform_layer< T_layout >", "classlbann_1_1uniform__layer.html", null ],
        [ "lbann::unpooling_layer< T_layout >", "classlbann_1_1unpooling__layer.html", null ]
      ] ]
    ] ],
    [ "lbann::lbann_callback", "classlbann_1_1lbann__callback.html", [
      [ "lbann::lbann_callback_check_dataset", "classlbann_1_1lbann__callback__check__dataset.html", null ],
      [ "lbann::lbann_callback_check_init", "classlbann_1_1lbann__callback__check__init.html", null ],
      [ "lbann::lbann_callback_check_reconstruction_error", "classlbann_1_1lbann__callback__check__reconstruction__error.html", null ],
      [ "lbann::lbann_callback_checknan", "classlbann_1_1lbann__callback__checknan.html", null ],
      [ "lbann::lbann_callback_checkpoint", "classlbann_1_1lbann__callback__checkpoint.html", null ],
      [ "lbann::lbann_callback_checksmall", "classlbann_1_1lbann__callback__checksmall.html", null ],
      [ "lbann::lbann_callback_debug", "classlbann_1_1lbann__callback__debug.html", null ],
      [ "lbann::lbann_callback_debug_io", "classlbann_1_1lbann__callback__debug__io.html", null ],
      [ "lbann::lbann_callback_dump_activations", "classlbann_1_1lbann__callback__dump__activations.html", null ],
      [ "lbann::lbann_callback_dump_gradients", "classlbann_1_1lbann__callback__dump__gradients.html", null ],
      [ "lbann::lbann_callback_dump_minibatch_sample_indices", "classlbann_1_1lbann__callback__dump__minibatch__sample__indices.html", null ],
      [ "lbann::lbann_callback_dump_weights", "classlbann_1_1lbann__callback__dump__weights.html", null ],
      [ "lbann::lbann_callback_early_stopping", "classlbann_1_1lbann__callback__early__stopping.html", null ],
      [ "lbann::lbann_callback_gradient_check", "classlbann_1_1lbann__callback__gradient__check.html", null ],
      [ "lbann::lbann_callback_hang", "classlbann_1_1lbann__callback__hang.html", null ],
      [ "lbann::lbann_callback_imcomm", "classlbann_1_1lbann__callback__imcomm.html", null ],
      [ "lbann::lbann_callback_io", "classlbann_1_1lbann__callback__io.html", null ],
      [ "lbann::lbann_callback_learning_rate", "classlbann_1_1lbann__callback__learning__rate.html", [
        [ "lbann::lbann_callback_adaptive_learning_rate", "classlbann_1_1lbann__callback__adaptive__learning__rate.html", null ],
        [ "lbann::lbann_callback_drop_fixed_learning_rate", "classlbann_1_1lbann__callback__drop__fixed__learning__rate.html", null ],
        [ "lbann::lbann_callback_linear_growth_learning_rate", "classlbann_1_1lbann__callback__linear__growth__learning__rate.html", null ],
        [ "lbann::lbann_callback_optimizerwise_adaptive_learning_rate", "classlbann_1_1lbann__callback__optimizerwise__adaptive__learning__rate.html", null ],
        [ "lbann::lbann_callback_poly_learning_rate", "classlbann_1_1lbann__callback__poly__learning__rate.html", null ],
        [ "lbann::lbann_callback_step_learning_rate", "classlbann_1_1lbann__callback__step__learning__rate.html", null ]
      ] ],
      [ "lbann::lbann_callback_ltfb", "classlbann_1_1lbann__callback__ltfb.html", null ],
      [ "lbann::lbann_callback_print", "classlbann_1_1lbann__callback__print.html", null ],
      [ "lbann::lbann_callback_profiler", "classlbann_1_1lbann__callback__profiler.html", null ],
      [ "lbann::lbann_callback_save_images", "classlbann_1_1lbann__callback__save__images.html", null ],
      [ "lbann::lbann_callback_save_model", "classlbann_1_1lbann__callback__save__model.html", null ],
      [ "lbann::lbann_callback_summary", "classlbann_1_1lbann__callback__summary.html", null ],
      [ "lbann::lbann_callback_timeline", "classlbann_1_1lbann__callback__timeline.html", null ],
      [ "lbann::lbann_callback_timer", "classlbann_1_1lbann__callback__timer.html", null ],
      [ "lbann::lbann_callback_variable_minibatch", "classlbann_1_1lbann__callback__variable__minibatch.html", [
        [ "lbann::lbann_callback_minibatch_schedule", "classlbann_1_1lbann__callback__minibatch__schedule.html", null ],
        [ "lbann::lbann_callback_step_minibatch", "classlbann_1_1lbann__callback__step__minibatch.html", null ]
      ] ]
    ] ],
    [ "lbann::lbann_callback_imcomm::imcomm_params", "structlbann_1_1lbann__callback__imcomm_1_1imcomm__params.html", null ],
    [ "lbann::lbann_callback_minibatch_schedule::minibatch_step", "structlbann_1_1lbann__callback__minibatch__schedule_1_1minibatch__step.html", null ],
    [ "lbann::lbann_comm", "classlbann_1_1lbann__comm.html", null ],
    [ "lbann::lbann_comm::allreduce_options", "structlbann_1_1lbann__comm_1_1allreduce__options.html", null ],
    [ "lbann::lbann_image_preprocessor", "classlbann_1_1lbann__image__preprocessor.html", [
      [ "lbann::generic_data_reader", "classlbann_1_1generic__data__reader.html", [
        [ "lbann::ascii_reader", "classlbann_1_1ascii__reader.html", null ],
        [ "lbann::csv_reader", "classlbann_1_1csv__reader.html", [
          [ "lbann::data_reader_nci", "classlbann_1_1data__reader__nci.html", null ]
        ] ],
        [ "lbann::data_reader_jag", "classlbann_1_1data__reader__jag.html", null ],
        [ "lbann::data_reader_synthetic", "classlbann_1_1data__reader__synthetic.html", null ],
        [ "lbann::generic_compound_data_reader", "classlbann_1_1generic__compound__data__reader.html", [
          [ "lbann::data_reader_merge_features", "classlbann_1_1data__reader__merge__features.html", null ],
          [ "lbann::data_reader_merge_samples", "classlbann_1_1data__reader__merge__samples.html", null ]
        ] ],
        [ "lbann::image_data_reader", "classlbann_1_1image__data__reader.html", [
          [ "lbann::cifar10_reader", "classlbann_1_1cifar10__reader.html", null ],
          [ "lbann::imagenet_reader", "classlbann_1_1imagenet__reader.html", [
            [ "lbann::data_reader_multi_images", "classlbann_1_1data__reader__multi__images.html", [
              [ "lbann::data_reader_mnist_siamese", "classlbann_1_1data__reader__mnist__siamese.html", null ],
              [ "lbann::data_reader_triplet", "classlbann_1_1data__reader__triplet.html", null ]
            ] ],
            [ "lbann::imagenet_reader_single", "classlbann_1_1imagenet__reader__single.html", null ]
          ] ],
          [ "lbann::imagenet_reader_org", "classlbann_1_1imagenet__reader__org.html", null ],
          [ "lbann::imagenet_reader_patches", "classlbann_1_1imagenet__reader__patches.html", null ],
          [ "lbann::mnist_reader", "classlbann_1_1mnist__reader.html", null ]
        ] ],
        [ "lbann::mesh_reader", "classlbann_1_1mesh__reader.html", null ],
        [ "lbann::numpy_reader", "classlbann_1_1numpy__reader.html", null ],
        [ "lbann::pilot2_molecular_reader", "classlbann_1_1pilot2__molecular__reader.html", null ]
      ] ]
    ] ],
    [ "lbann::lbann_model_header", "structlbann_1_1lbann__model__header.html", null ],
    [ "lbann::lbann_model_sequential_header", "structlbann_1_1lbann__model__sequential__header.html", null ],
    [ "lbann::lbann_quantizer", "classlbann_1_1lbann__quantizer.html", null ],
    [ "lbann::lbann_quantizer::adaptive_reconstructions", "structlbann_1_1lbann__quantizer_1_1adaptive__reconstructions.html", null ],
    [ "lbann::lbann_quantizer::adaptive_thresholds", "structlbann_1_1lbann__quantizer_1_1adaptive__thresholds.html", null ],
    [ "lbann::lbann_summary", "classlbann_1_1lbann__summary.html", null ],
    [ "lbann::metric", "classlbann_1_1metric.html", [
      [ "lbann::boolean_accuracy_metric", "classlbann_1_1boolean__accuracy__metric.html", null ],
      [ "lbann::boolean_false_negatives_metric", "classlbann_1_1boolean__false__negatives__metric.html", null ],
      [ "lbann::boolean_false_positives_metric", "classlbann_1_1boolean__false__positives__metric.html", null ],
      [ "lbann::categorical_accuracy_metric", "classlbann_1_1categorical__accuracy__metric.html", null ],
      [ "lbann::mean_absolute_deviation_metric", "classlbann_1_1mean__absolute__deviation__metric.html", null ],
      [ "lbann::mean_squared_error_metric", "classlbann_1_1mean__squared__error__metric.html", null ],
      [ "lbann::pearson_correlation_metric", "classlbann_1_1pearson__correlation__metric.html", null ],
      [ "lbann::r2_metric", "classlbann_1_1r2__metric.html", null ],
      [ "lbann::top_k_categorical_accuracy_metric", "classlbann_1_1top__k__categorical__accuracy__metric.html", null ]
    ] ],
    [ "lbann::metric_statistics", "structlbann_1_1metric__statistics.html", null ],
    [ "lbann::metric_statistics::packing_header", "structlbann_1_1metric__statistics_1_1packing__header.html", null ],
    [ "lbann::model", "classlbann_1_1model.html", [
      [ "lbann::directed_acyclic_graph_model", "classlbann_1_1directed__acyclic__graph__model.html", [
        [ "lbann::recurrent_model", "classlbann_1_1recurrent__model.html", null ],
        [ "lbann::siamese_model", "classlbann_1_1siamese__model.html", null ]
      ] ],
      [ "lbann::sequential_model", "classlbann_1_1sequential__model.html", [
        [ "lbann::greedy_layerwise_autoencoder", "classlbann_1_1greedy__layerwise__autoencoder.html", null ]
      ] ]
    ] ],
    [ "lbann::NetworkParams", "classlbann_1_1NetworkParams.html", null ],
    [ "lbann::objective_function", "classlbann_1_1objective__function.html", null ],
    [ "lbann::objective_function_term", "classlbann_1_1objective__function__term.html", [
      [ "lbann::group_lasso_weight_regularization", "classlbann_1_1group__lasso__weight__regularization.html", null ],
      [ "lbann::kl_divergence", "classlbann_1_1kl__divergence.html", null ],
      [ "lbann::l1_weight_regularization", "classlbann_1_1l1__weight__regularization.html", null ],
      [ "lbann::l2_weight_regularization", "classlbann_1_1l2__weight__regularization.html", null ],
      [ "lbann::layer_term", "classlbann_1_1layer__term.html", null ],
      [ "lbann::loss_function", "classlbann_1_1loss__function.html", [
        [ "lbann::binary_cross_entropy", "classlbann_1_1binary__cross__entropy.html", null ],
        [ "lbann::cross_entropy", "classlbann_1_1cross__entropy.html", null ],
        [ "lbann::cross_entropy_with_uncertainty", "classlbann_1_1cross__entropy__with__uncertainty.html", null ],
        [ "lbann::geom_negloglike", "classlbann_1_1geom__negloglike.html", null ],
        [ "lbann::mean_absolute_deviation_loss", "classlbann_1_1mean__absolute__deviation__loss.html", null ],
        [ "lbann::mean_absolute_error_loss", "classlbann_1_1mean__absolute__error__loss.html", null ],
        [ "lbann::mean_squared_error_loss", "classlbann_1_1mean__squared__error__loss.html", null ],
        [ "lbann::poisson_negloglike", "classlbann_1_1poisson__negloglike.html", null ],
        [ "lbann::polya_negloglike", "classlbann_1_1polya__negloglike.html", null ]
      ] ]
    ] ],
    [ "lbann::offline_patches_npz", "classlbann_1_1offline__patches__npz.html", null ],
    [ "lbann::optimizer", "classlbann_1_1optimizer.html", [
      [ "lbann::adagrad", "classlbann_1_1adagrad.html", null ],
      [ "lbann::adam", "classlbann_1_1adam.html", null ],
      [ "lbann::hypergradient_adam", "classlbann_1_1hypergradient__adam.html", null ],
      [ "lbann::rmsprop", "classlbann_1_1rmsprop.html", null ],
      [ "lbann::sgd", "classlbann_1_1sgd.html", null ]
    ] ],
    [ "lbann::path_delimiter", "structlbann_1_1path__delimiter.html", null ],
    [ "lbann::PerformanceParams", "classlbann_1_1PerformanceParams.html", null ],
    [ "lbann::persist", "classlbann_1_1persist.html", null ],
    [ "lbann::protobuf_utils", "classlbann_1_1protobuf__utils.html", null ],
    [ "lbann::prototext_fn_triple", "structlbann_1_1prototext__fn__triple.html", null ],
    [ "lbann::rmsprop::packing_header", "structlbann_1_1rmsprop_1_1packing__header.html", null ],
    [ "lbann::rng< DistType, DType >", "classlbann_1_1rng.html", null ],
    [ "lbann::sgd::packing_header", "structlbann_1_1sgd_1_1packing__header.html", null ],
    [ "lbann::stack_profiler", "classlbann_1_1stack__profiler.html", null ],
    [ "lbann::SystemParams", "classlbann_1_1SystemParams.html", null ],
    [ "lbann::TrainingParams", "classlbann_1_1TrainingParams.html", null ],
    [ "lbann::update_data_reader_functor", "classlbann_1_1update__data__reader__functor.html", null ],
    [ "lbann::weights", "classlbann_1_1weights.html", null ],
    [ "lbann::weights_initializer", "classlbann_1_1weights__initializer.html", [
      [ "lbann::constant_initializer", "classlbann_1_1constant__initializer.html", null ],
      [ "lbann::fan_in_fan_out_initializer", "classlbann_1_1fan__in__fan__out__initializer.html", [
        [ "lbann::glorot_normal_initializer", "classlbann_1_1glorot__normal__initializer.html", null ],
        [ "lbann::glorot_uniform_initializer", "classlbann_1_1glorot__uniform__initializer.html", null ],
        [ "lbann::he_normal_initializer", "classlbann_1_1he__normal__initializer.html", null ],
        [ "lbann::he_uniform_initializer", "classlbann_1_1he__uniform__initializer.html", null ]
      ] ],
      [ "lbann::normal_initializer", "classlbann_1_1normal__initializer.html", null ],
      [ "lbann::uniform_initializer", "classlbann_1_1uniform__initializer.html", null ]
    ] ],
    [ "options", "classoptions.html", null ],
    [ "exception", null, [
      [ "lbann::lbann_exception", "classlbann_1_1lbann__exception.html", null ]
    ] ]
];