var searchData=
[
  ['hadamard_2ehpp',['hadamard.hpp',['../hadamard_8hpp.html',1,'']]],
  ['hadamard_5flayer',['hadamard_layer',['../classlbann_1_1hadamard__layer.html',1,'lbann::hadamard_layer&lt; T_layout &gt;'],['../classlbann_1_1hadamard__layer.html#af79b4f3d1e2709092b36fb0f38d30430',1,'lbann::hadamard_layer::hadamard_layer()']]],
  ['has_5fbool',['has_bool',['../classoptions.html#aafb1d2a7ccde0b1bf786230ba4080ecd',1,'options']]],
  ['has_5fdouble',['has_double',['../classoptions.html#ab66aae6c79cdde8dd38d0d3fc8aa3de5',1,'options']]],
  ['has_5ffloat',['has_float',['../classoptions.html#ae6f1f714c9ad1dc01cb5509df0c4c838',1,'options']]],
  ['has_5fint',['has_int',['../classoptions.html#a01020aa5bd82bcff1b1c950b20578883',1,'options']]],
  ['has_5fmotifs',['has_motifs',['../proto__common_8cpp.html#a1b10b844cb4e440144a2d53746c6f4a2',1,'has_motifs(lbann_comm *comm, const lbann_data::LbannPB &amp;p):&#160;proto_common.cpp'],['../proto__common_8hpp.html#a9a9d7504db9e1b819fcddac197da3252',1,'has_motifs(lbann::lbann_comm *comm, const lbann_data::LbannPB &amp;p):&#160;proto_common.cpp']]],
  ['has_5fstring',['has_string',['../classoptions.html#a5db5b27267c27ffe1b029948f64e54c1',1,'options']]],
  ['hash_5f1',['HASH_1',['../cyg__profile_8hpp.html#a6e3af9336b908524f4e0ced4bc47482f',1,'cyg_profile.hpp']]],
  ['hash_5f2',['HASH_2',['../cyg__profile_8hpp.html#a393d052ede2cce96794d660e3d4dfcce',1,'cyg_profile.hpp']]],
  ['he_5fnormal_5finitializer',['he_normal_initializer',['../classlbann_1_1he__normal__initializer.html',1,'lbann::he_normal_initializer'],['../classlbann_1_1he__normal__initializer.html#a959fc0dcf16250291142a3fc308cfc03',1,'lbann::he_normal_initializer::he_normal_initializer()']]],
  ['he_5funiform_5finitializer',['he_uniform_initializer',['../classlbann_1_1he__uniform__initializer.html',1,'lbann::he_uniform_initializer'],['../classlbann_1_1he__uniform__initializer.html#a17bc65cd69fbce240c2050c228a2682c',1,'lbann::he_uniform_initializer::he_uniform_initializer()']]],
  ['header_5ffactor',['HEADER_FACTOR',['../classlbann_1_1lbann__quantizer.html#afb4315625e371169cabfac56c3f75d37',1,'lbann::lbann_quantizer']]],
  ['height',['height',['../structlayer__header.html#ad986e4b92e5b455e066fd349725c6bd9',1,'layer_header']]],
  ['horizontal_5fflip',['horizontal_flip',['../classlbann_1_1mesh__reader.html#a8cff71603c2d652f8b000a5dc4c75431',1,'lbann::mesh_reader::horizontal_flip()'],['../classlbann_1_1lbann__image__preprocessor.html#a4ba2de0a781dfa0a2652ad4d777a241f',1,'lbann::lbann_image_preprocessor::horizontal_flip()']]],
  ['horizontal_5fshift',['horizontal_shift',['../classlbann_1_1lbann__image__preprocessor.html#ae62596b4af5d1940aa0499cde2bdd005',1,'lbann::lbann_image_preprocessor']]],
  ['hostname',['HostName',['../classlbann_1_1SystemParams.html#a4aa517715ee0a454ee7ca2cc23fe30ee',1,'lbann::SystemParams']]],
  ['hypergradient_5fadam',['hypergradient_adam',['../classlbann_1_1hypergradient__adam.html',1,'lbann::hypergradient_adam'],['../classlbann_1_1hypergradient__adam.html#aefb4d2c307d8f7997624b2ebe977ca3b',1,'lbann::hypergradient_adam::hypergradient_adam(lbann_comm *comm, DataType init_learning_rate, DataType hyper_learning_rate=DataType(1e-7), DataType beta1=DataType(0.9), DataType beta2=DataType(0.99), DataType eps=DataType(1e-8))'],['../classlbann_1_1hypergradient__adam.html#aadb9841237fca01bbe2187a39e8f3cc5',1,'lbann::hypergradient_adam::hypergradient_adam(const hypergradient_adam &amp;other)']]],
  ['hypergradient_5fadam_2ecpp',['hypergradient_adam.cpp',['../hypergradient__adam_8cpp.html',1,'']]],
  ['hypergradient_5fadam_2ehpp',['hypergradient_adam.hpp',['../hypergradient__adam_8hpp.html',1,'']]]
];
