var searchData=
[
  ['pack_5fscalars',['pack_scalars',['../classlbann_1_1generic__data__reader.html#a93dddd2276ddc34cc97922ee27c44582',1,'lbann::generic_data_reader::pack_scalars()'],['../structlbann_1_1metric__statistics.html#a88f5324c96cceb47d723d2acfddb41f1',1,'lbann::metric_statistics::pack_scalars()'],['../classlbann_1_1adam.html#a43e941b596c5d1cc68b795b0399398c4',1,'lbann::adam::pack_scalars()'],['../classlbann_1_1rmsprop.html#ac2c5ae4dc2438da1da54072a297b148b',1,'lbann::rmsprop::pack_scalars()'],['../classlbann_1_1sgd.html#ab95756a63ec3fa0100d436a5a9addfeb',1,'lbann::sgd::pack_scalars()']]],
  ['parse_5flist',['parse_list',['../namespacelbann_1_1proto.html#a6c6742da9015768123b7cddd74d17399',1,'lbann::proto']]],
  ['parse_5fnetwork_5fstring',['parse_network_string',['../classlbann_1_1NetworkParams.html#a14954fcbacb6c9522bd3cf6c28bc93d5',1,'lbann::NetworkParams']]],
  ['parse_5fparams',['parse_params',['../classlbann_1_1TrainingParams.html#a245c0674a2132cb15f1198b1f4dd2bf8',1,'lbann::TrainingParams::parse_params()'],['../classlbann_1_1PerformanceParams.html#abde9f8ab7421f863f11542721c93768f',1,'lbann::PerformanceParams::parse_params()'],['../classlbann_1_1NetworkParams.html#a9b6f7e0330547330238085f3fd0e3702',1,'lbann::NetworkParams::parse_params()'],['../classlbann_1_1SystemParams.html#a730176df36a262f7ef141afda372488d',1,'lbann::SystemParams::parse_params()']]],
  ['parse_5fpath',['parse_path',['../namespacelbann.html#a1ce6832a54235a5fb333f50fffbe1b63',1,'lbann']]],
  ['parse_5fprototext_5ffilenames_5ffrom_5fcommand_5fline',['parse_prototext_filenames_from_command_line',['../classlbann_1_1protobuf__utils.html#a690c56a9ac8bcbc883751355b53e0006',1,'lbann::protobuf_utils']]],
  ['partitioned_5fio_5fbuffer',['partitioned_io_buffer',['../classlbann_1_1partitioned__io__buffer.html#a2dd39b740a3c0ea613cef9540d3c3e5d',1,'lbann::partitioned_io_buffer::partitioned_io_buffer(lbann_comm *comm, int num_parallel_readers, std::map&lt; execution_mode, generic_data_reader *&gt; data_readers)'],['../classlbann_1_1partitioned__io__buffer.html#a54a675792e2ae8d2ac4bb044b6209dcd',1,'lbann::partitioned_io_buffer::partitioned_io_buffer(const partitioned_io_buffer &amp;)=default']]],
  ['pe_5fring_5fallreduce',['pe_ring_allreduce',['../classlbann_1_1lbann__comm.html#ac294fe5fa47f283aba31fa1abfa99438',1,'lbann::lbann_comm']]],
  ['pearson_5fcorrelation_5fmetric',['pearson_correlation_metric',['../classlbann_1_1pearson__correlation__metric.html#ac0d93a18b2eb500db51f40311a3b3634',1,'lbann::pearson_correlation_metric::pearson_correlation_metric(lbann_comm *comm)'],['../classlbann_1_1pearson__correlation__metric.html#a52f03d952d693a58d6865b5c62b021af',1,'lbann::pearson_correlation_metric::pearson_correlation_metric(const pearson_correlation_metric &amp;other)']]],
  ['performanceparams',['PerformanceParams',['../classlbann_1_1PerformanceParams.html#a1c8f2276e83effdf28e6be3ac0da91c0',1,'lbann::PerformanceParams']]],
  ['permute_5flayers',['permute_layers',['../classlbann_1_1model.html#a31c281b63593a0ec7110664f7309b01a',1,'lbann::model']]],
  ['persist',['persist',['../classlbann_1_1persist.html#abf1454f4d5b61617ccfa60ba9989f1a3',1,'lbann::persist']]],
  ['pilot2_5fmolecular_5freader',['pilot2_molecular_reader',['../classlbann_1_1pilot2__molecular__reader.html#ac883c7e0fcc935bc6573efa3352275ca',1,'lbann::pilot2_molecular_reader::pilot2_molecular_reader(int num_neighbors, int max_neighborhood, bool shuffle=true)'],['../classlbann_1_1pilot2__molecular__reader.html#a6d74b894fabaf78175684fcc2f747b34',1,'lbann::pilot2_molecular_reader::pilot2_molecular_reader(const pilot2_molecular_reader &amp;)=default']]],
  ['pixel_5fnoise',['pixel_noise',['../classlbann_1_1lbann__image__preprocessor.html#aece5b572d0a2fe123cc66412d7a5c91e',1,'lbann::lbann_image_preprocessor']]],
  ['poisson_5fnegloglike',['poisson_negloglike',['../classlbann_1_1poisson__negloglike.html#af2eabe95046d8995263a2df9e8e34f7d',1,'lbann::poisson_negloglike::poisson_negloglike(EvalType scale_factor=EvalType(1))'],['../classlbann_1_1poisson__negloglike.html#a0d85fa77a2dc622524726584619e718a',1,'lbann::poisson_negloglike::poisson_negloglike(const poisson_negloglike &amp;other)=default']]],
  ['polya_5fnegloglike',['polya_negloglike',['../classlbann_1_1polya__negloglike.html#a3f3c7f775d548ac8e011fb1b637804cb',1,'lbann::polya_negloglike::polya_negloglike(EvalType scale_factor=EvalType(1))'],['../classlbann_1_1polya__negloglike.html#a35d76a08dea5203c4f70e48260adf1ec',1,'lbann::polya_negloglike::polya_negloglike(const polya_negloglike &amp;other)']]],
  ['pooling_5flayer',['pooling_layer',['../classlbann_1_1pooling__layer.html#a012223832bcd60644724425488059152',1,'lbann::pooling_layer::pooling_layer(lbann_comm *comm, int num_data_dims, int pool_dim, int pad, int stride, pool_mode mode, cudnn::cudnn_manager *cudnn=nullptr)'],['../classlbann_1_1pooling__layer.html#ad0694acb2188cb539a1ae616846600c3',1,'lbann::pooling_layer::pooling_layer(lbann_comm *comm, int num_data_dims, std::vector&lt; int &gt; pool_dims, std::vector&lt; int &gt; pads, std::vector&lt; int &gt; strides, pool_mode mode, cudnn::cudnn_manager *cudnn=nullptr)'],['../classlbann_1_1pooling__layer.html#aab33e9b05ae9fffe36333feabbee9895',1,'lbann::pooling_layer::pooling_layer(const pooling_layer &amp;other)']]],
  ['populate_5fdatastore',['populate_datastore',['../classlbann_1_1data__store__csv.html#a6184c48ec096372899e127235bb741da',1,'lbann::data_store_csv']]],
  ['position_5fvalid',['position_valid',['../classlbann_1_1generic__data__reader.html#a2b10538440d784f0f12582a5407acef2',1,'lbann::generic_data_reader']]],
  ['postprocess_5fdata_5fsource',['postprocess_data_source',['../classlbann_1_1generic__data__reader.html#a7bbf74725a96235dc1cd20ff440a69bd',1,'lbann::generic_data_reader']]],
  ['power_5flayer',['power_layer',['../classlbann_1_1power__layer.html#a0429ad3cad14663b8fea013360b60e04',1,'lbann::power_layer']]],
  ['preferred',['preferred',['../structlbann_1_1path__delimiter.html#a4f3bb346e47a66b16419125b1485e2ef',1,'lbann::path_delimiter']]],
  ['preprocess_5fdata_5fsource',['preprocess_data_source',['../classlbann_1_1generic__data__reader.html#ad613f95666b973d8da77773fb34c9b66',1,'lbann::generic_data_reader']]],
  ['print',['print',['../classoptions.html#a6fd8a97883eaecb722e5c6b120d8f9be',1,'options::print()'],['../classlbann_1_1stack__profiler.html#a27d55f6551cf445d3d0e9836858f6872',1,'lbann::stack_profiler::print()'],['../namespacelbann_1_1graph.html#a956e9f6f1b842a2ffe5bda9015bbb906',1,'lbann::graph::print()']]],
  ['print_5faffinity',['print_affinity',['../namespacelbann.html#a4fd83a86cf27ca7bc1e01576a5ee36e0',1,'lbann']]],
  ['print_5faffinity_5fsubset',['print_affinity_subset',['../namespacelbann.html#acbd15ead7411cf84db559cc39a82f445',1,'lbann']]],
  ['print_5ffp_5fstart',['print_fp_start',['../classlbann_1_1lbann__callback__debug__io.html#a3c9897a583441381f82a11246aea4424',1,'lbann::lbann_callback_debug_io']]],
  ['print_5fhelp',['print_help',['../proto__common_8cpp.html#a403b98ced142a0afa3b939e7af1095b0',1,'print_help(lbann::lbann_comm *comm):&#160;proto_common.cpp'],['../proto__common_8hpp.html#a403b98ced142a0afa3b939e7af1095b0',1,'print_help(lbann::lbann_comm *comm):&#160;proto_common.cpp']]],
  ['print_5flayer_5fdescription',['print_layer_description',['../classlbann_1_1model.html#ab173fd93a80a2980059ff292c308cbf5',1,'lbann::model']]],
  ['print_5flbann_5fexception_5fstack_5ftrace',['print_lbann_exception_stack_trace',['../namespacelbann_1_1stack__trace.html#ae7396b3b0ee5d087a045f04ce690cae4',1,'lbann::stack_trace']]],
  ['print_5fparameters',['print_parameters',['../proto__common_8cpp.html#adf83ffea572cec61b853b61aa68bea27',1,'print_parameters(lbann::lbann_comm *comm, lbann_data::LbannPB &amp;p):&#160;proto_common.cpp'],['../proto__common_8hpp.html#adf83ffea572cec61b853b61aa68bea27',1,'print_parameters(lbann::lbann_comm *comm, lbann_data::LbannPB &amp;p):&#160;proto_common.cpp']]],
  ['print_5fphase_5fstart',['print_phase_start',['../classlbann_1_1lbann__callback__debug__io.html#a528f4aea5f657f40b27c58a164d4095a',1,'lbann::lbann_callback_debug_io']]],
  ['print_5fstack_5ftrace',['print_stack_trace',['../namespacelbann_1_1stack__trace.html#a52adbb11fce7541e2bc34b712d09e868',1,'lbann::stack_trace']]],
  ['printme',['printme',['../classlbann_1_1data__store__csv.html#afe48c08075e3327a2b9bb14c73a9c952',1,'lbann::data_store_csv']]],
  ['prof_5fregion_5fbegin',['prof_region_begin',['../namespaceanonymous__namespace_02profiler_8cpp_03.html#ad2ea0278cd1f25dc30ddd76194ace64b',1,'anonymous_namespace{profiler.cpp}']]],
  ['prof_5fregion_5fend',['prof_region_end',['../namespaceanonymous__namespace_02profiler_8cpp_03.html#a7984c26fb186307873a2f83f91715a99',1,'anonymous_namespace{profiler.cpp}']]],
  ['proportion_5fthreshold',['proportion_threshold',['../classlbann_1_1lbann__quantizer.html#aa5aabc1cb4163e95aee993d9b37b9b32',1,'lbann::lbann_quantizer']]]
];
